[package]
name = "ts3"
version = "0.1.0"
authors = ["0xc0001a2040 <mrgunflame@protonmail.com>"]
edition = "2018"
description = "A TeamSpeak3 Query library"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full"] }
async-trait = "0.1.42"
bytes = "1.0.1"
